# paper-factor

./: .env.example  .gitignore  README.md  dashboard.html  dashboard_server.py  pyproject.toml  rebuild_data.py  requirements.txt  run_all_pending.sh  start.bat  start.sh
.claude/agents/: factor-validator.md
.claude/skills/clean/: SKILL.md
.claude/skills/factor/: SKILL.md
.claude/skills/getdata/: SKILL.md
.github/workflows/: docker-publish.yml
data/: schema.json
factor_implementation_source_data_debug/: minute_pv.h5
paper_factor_cli/: __init__.py  main.py
papers/ideas/: ideas.json
papers/inbox/: 基于GRU,TCN模型的深度学习因子选股效果研究.extracted.json
papers/website/: sources.json  website__3f29820a0425afcca8addc.md  website__GuN6QDM541vfdpqpGX71nQ.md  website__MzSb_fbnbKItP-ebGFONeA.md  website__f0211479dec9553aeeee37.md
rdagent/core/: conf.py  proposal.py
rdagent/oai/: llm_conf.py
rdagent/oai/backend/: base.py  (+2 more)
rdagent/utils/: __init__.py  env.py  prompts.yaml
scripts/: .rag_index.pkl  README_paper_factor_docker.md  barra_evaluate.py  batch_minute_full_local.py  claude_factor_helper.py  convert_minute_by_date.py  convert_remote_data.py  daily_update.py  domain_knowledge_rag.py  evaluate_factor.py  extract_website_factors.py  full.py  generate_fake_factors.py  generate_stock_data.py  install_factor_docker_image.sh  llm_review_factor.py  plot_decile.py  run_all.py  run_all_full.py  run_all_pending_full.py  run_factor_full.py  setup.sh  setup_cron.sh  sync_data.py  sync_utils.py
templates/: daily_factor_template.py  factor_utils.py  minute_factor_template.py
(+60 files in other folders)
